# cocktail-recipes-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
contracts/cocktail-recipes/: README.md  manifest.json
contracts/cocktail-recipes/schema/: import-upsert.schema.json  recipe-api.schema.json
docs/: example_transcripts.md
src/cocktail_recipes_mcp/: __init__.py  client.py  config.py  errors.py  main.py  models.py  oauth_app.py  oauth_provider.py  oauth_storage.py  oauth_tokens.py  operation_log.py  security.py  server.py  service.py  tool_registry.py
tests/: test_client_auth.py  test_dry_run_behavior.py  test_embedded_oauth.py  test_http_auth.py
