[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cocktail-recipes-mcp"
version = "0.1.0"
description = "Dockerized MCP server for the cocktail-recipes REST API"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Aephir" }]
dependencies = [
  "mcp>=1.10.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "tenacity>=8.5.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "respx>=0.21.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/cocktail_recipes_mcp"]
